[project]
name = "juv"
version = "0.2.4"
description = "A little wrapper around `uv` to launch ephemeral Jupyter notebooks."
readme = "README.md"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "jupytext>=1.16.4",
    "rich>=13.9.2",
    "uv>=0.4.25",
]

[project.scripts]
juv = "juv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["inline-snapshot>=0.13.3", "pytest>=8.3.3", "ruff>=0.7.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D401",   # First line should be in imperative mood (remove to opt in)
    "COM812", # Missing trailing comma (conflicts with ruff format)
    "ISC001", # Import sorting (conflicts with ruff format)
    "FIX002", # Fixable issue
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D",      # No docstrings in tests
    "S101",   # Use of assert
    "B018",   # "useless expression", for accessing the Foo._repr_mimbundle_ descriptor
    "SLF001", # Access private member
]
